@@ -1,3 +1,8 @@
+2013-08-21 Harald Oehlmann <oehhar@users.sourceforge.net>
+
+	* labelentry.tcl: Bug fixed:
+	Methods from Tk entry widget restored [Bug 1002844].
+	
 2013-01-09 Harald Oehlmann <oehhar@users.sourceforge.net>
 
 	* widget.tcl: Bug fixed:
